--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngx-share/button": "^7.1.4",
     "@ngx-share/buttons": "^7.1.4",
     "@ngx-share/core": "^7.1.4",
+    "bootstrap": "^4.5.3",
     "core-js": "^3.6.4",
     "emoji-mart": "^3.0.0",
     "font-awesome": "^4.7.0",
