--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "workbench.preferredDarkColorTheme": "SynthWave '84"
+    "workbench.preferredDarkColorTheme": "SynthWave '84",
+    "workbench.colorTheme": "SynthWave '84"
 }
