--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "workbench.preferredDarkColorTheme": "SynthWave '84",
-    "workbench.colorTheme": "SynthWave '84"
+    "workbench.preferredDarkColorTheme": "Outrun Night",
+    "workbench.colorTheme": "Tokyo Hack"
 }
