--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "^9.0.2",
     "@angular/platform-server": "^9.0.2",
     "@angular/router": "^9.0.2",
+    "@angular/service-worker": "^9.0.2",
     "@ctrl/ngx-emoji-mart": "^3.0.4",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
