--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "localstorage-polyfill": "^1.0.1",
     "ng-lazyload-image": "^7.1.0",
     "ngx-clipboard": "^12.3.1",
     "ngx-color-picker": "^9.1.0",
