--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "serve:ssr": "node dist/spotbie/server/main.js",
     "build:ssr": "ng build --prod && ng run spotbie:server:production",
     "prerender": "ng run spotbie:prerender",
-    "build:android": "ng build --prod --base-href . --output-path ~/Desktop/spotbie/spotbie_android/www/",
+    "build:android": "ng build --prod --base-href . --output-path ~/Desktop/spotbie/spotbie_android/www",
     "build:ios": "ng build --prod --base-href . --output-path ~/Desktop/spotbie/spotbie_ios/www/",
     "deploy:server": "node deploy"
   },
@@ -38,6 +38,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@ionic-native/android-permissions": "^5.30.0",
+    "@ionic-native/core": "^5.30.0",
     "@ng-toolkit/universal": "^1.1.21",
     "@nguniversal/express-engine": "^9.1.1",
     "@ngx-meta/core": "^8.0.2",
