--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "workbench.preferredDarkColorTheme": "Outrun Night",
-    "workbench.colorTheme": "SynthWave '84"
+    "workbench.colorTheme": "Legendary Dark"
 }
