--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "localstorage-polyfill": "^1.0.1",
     "ng-lazyload-image": "^7.1.0",
     "ngx-clipboard": "^12.3.1",
+    "ngx-code-gentleman-carousel": "^2.0.2",
     "ngx-color-picker": "^9.1.0",
     "ngx-cookie-service": "^2.3.0",
     "ngx-device-detector": "^1.3.20",
