--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "e2e": "ng e2e",
     "dev:ssr": "ng run spotbie:serve-ssr",
     "serve:ssr": "node dist/spotbie/server/main.js",
-    "build:ssr": "ng build --prod && ng run spotbie:server:production",
+    "build:ssr": "ng build --prod && ng run spotbie:server:production && npm run post-build",
     "prerender": "ng run spotbie:prerender",
     "build:android": "ng build --prod --base-href . --output-path ~/Desktop/spotbie/spotbie_android/www",
     "build:ios": "ng build --prod --base-href . --output-path ~/Desktop/spotbie/spotbie_ios/www/",
