--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
   "dependencies": {
     "@agm/core": "^1.1.0",
     "@angular-devkit/build-angular": "^0.901.10",
-    "@angular/animations": "^9.0.2",
-    "@angular/cdk": "^9.2.1",
-    "@angular/common": "^9.0.2",
-    "@angular/compiler": "^9.0.2",
-    "@angular/core": "^9.0.2",
-    "@angular/forms": "^9.0.2",
+    "@angular/animations": "^12.0.0-next.8",
+    "@angular/cdk": "^11.2.8",
+    "@angular/common": "^12.0.0-next.8",
+    "@angular/compiler": "^12.0.0-next.8",
+    "@angular/core": "^12.0.0-next.8",
+    "@angular/forms": "^12.0.0-next.8",
     "@angular/material": "^9.2.1",
-    "@angular/platform-browser": "^9.0.2",
-    "@angular/platform-browser-dynamic": "^9.0.2",
-    "@angular/platform-server": "^9.0.2",
-    "@angular/router": "^9.0.2",
-    "@angular/service-worker": "^9.0.2",
+    "@angular/platform-browser": "^12.0.0-next.8",
+    "@angular/platform-browser-dynamic": "^12.0.0-next.8",
+    "@angular/platform-server": "^12.0.0-next.8",
+    "@angular/router": "^12.0.0-next.8",
+    "@angular/service-worker": "^12.0.0-next.8",
     "@ctrl/ngx-emoji-mart": "^3.0.4",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -70,12 +70,12 @@
     "swiper": "^4.5.1",
     "tslib": "^1.10.0",
     "yelp-fusion": "^3.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular/cli": "^11.2.8",
-    "@angular/compiler-cli": "^9.0.2",
-    "@angular/language-service": "^9.0.2",
+    "@angular/compiler-cli": "^12.0.0-next.8",
+    "@angular/language-service": "^12.0.0-next.8",
     "@nguniversal/builders": "^9.0.1",
     "@types/express": "^4.17.0",
     "@types/googlemaps": "^3.39.3",
@@ -96,6 +96,6 @@
     "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "~4.2.4"
   }
 }
