--- a/package.json
+++ b/package.json
@@ -33,42 +33,41 @@
     "@angular/platform-server": "^12.0.0-next.8",
     "@angular/router": "^12.0.0-next.8",
     "@angular/service-worker": "^12.0.0-next.8",
-    "@ctrl/ngx-emoji-mart": "^3.0.4",
-    "@fortawesome/angular-fontawesome": "^0.6.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@ionic-native/android-permissions": "^5.30.0",
-    "@ionic-native/core": "^5.30.0",
-    "@ng-toolkit/universal": "^1.1.21",
+    "@ctrl/ngx-emoji-mart": "^5.1.0",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@ionic-native/android-permissions": "^5.32.0",
+    "@ionic-native/core": "^5.32.0",
+    "@ng-toolkit/universal": "^8.1.0",
     "@nguniversal/express-engine": "^11.2.1",
-    "@ngx-meta/core": "^8.0.2",
     "@ngx-share/button": "^7.1.4",
     "@ngx-share/buttons": "^7.1.4",
     "@ngx-share/core": "^7.1.4",
     "@tensorflow-models/coco-ssd": "^2.2.1",
-    "@tensorflow/tfjs": "^2.8.2",
-    "bootstrap": "^4.5.3",
-    "core-js": "^3.6.4",
-    "emoji-mart": "^3.0.0",
-    "express": "^4.15.2",
+    "@tensorflow/tfjs": "^3.3.0",
+    "bootstrap": "^4.6.0",
+    "core-js": "^3.10.1",
+    "emoji-mart": "^3.0.1",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "localstorage-polyfill": "^1.0.1",
-    "ng-lazyload-image": "^7.1.0",
-    "ngx-clipboard": "^12.3.1",
+    "ng-lazyload-image": "^9.1.0",
+    "ngx-clipboard": "^14.0.1",
     "ngx-code-gentleman-carousel": "^2.0.2",
-    "ngx-color-picker": "^9.1.0",
-    "ngx-cookie-service": "^2.3.0",
-    "ngx-device-detector": "^1.3.20",
+    "ngx-color-picker": "^11.0.0",
+    "ngx-cookie-service": "^11.0.2",
+    "ngx-device-detector": "^2.0.6",
     "ngx-face-api-js": "^0.1.1",
     "ngx-font-awesome": "^1.0.0",
     "ngx-hammer": "^1.1.8",
-    "ngx-mask": "^8.1.7",
-    "ngx-useful-swiper": "^8.0.1",
+    "ngx-mask": "^11.1.5",
+    "ngx-useful-swiper": "^10.0.1",
     "rxjs": "^6.6.7",
-    "swiper": "^4.5.1",
-    "tslib": "^1.10.0",
+    "swiper": "^6.5.5",
+    "tslib": "^2.2.0",
     "yelp-fusion": "^3.0.0",
     "zone.js": "~0.11.4"
   },
@@ -77,25 +76,37 @@
     "@angular/compiler-cli": "^12.0.0-next.8",
     "@angular/language-service": "^12.0.0-next.8",
     "@nguniversal/builders": "^11.2.1",
-    "@types/express": "^4.17.0",
-    "@types/googlemaps": "^3.39.3",
-    "@types/jasmine": "^3.4.6",
+    "@types/express": "^4.17.11",
+    "@types/googlemaps": "^3.43.3",
+    "@types/jasmine": "^3.6.9",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.11.1",
-    "@types/swiper": "^4.4.9",
+    "@types/node": "^14.14.37",
+    "@types/swiper": "^5.4.2",
     "agm-overlays": "^2.0.0",
-    "codelyzer": "^5.1.2",
-    "ftp-deploy": "^2.3.8",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "codelyzer": "^6.0.1",
+    "ftp-deploy": "^2.4.1",
+    "jasmine-core": "~3.7.1",
+    "jasmine-spec-reporter": "~6.0.0",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "^7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "~9.1.1",
     "tslint": "~6.1.3",
     "typescript": "~4.2.4"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 7.3.9.",
+  "main": "deploy.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/0456franco/angular_spotbie.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/0456franco/angular_spotbie/issues"
+  },
+  "homepage": "https://github.com/0456franco/angular_spotbie#readme"
 }
