--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.1.0",
-    "@angular-devkit/build-angular": "^0.1102.8",
-    "@angular/animations": "^12.0.0-next.8",
+    "@angular-devkit/build-angular": "^12.0.1",
+    "@angular/animations": "^12.0.1",
     "@angular/cdk": "^11.2.8",
-    "@angular/common": "^12.0.0-next.8",
-    "@angular/compiler": "^12.0.0-next.8",
-    "@angular/core": "^12.0.0-next.8",
-    "@angular/forms": "^12.0.0-next.8",
+    "@angular/common": "^12.0.1",
+    "@angular/compiler": "^12.0.1",
+    "@angular/core": "^12.0.1",
+    "@angular/forms": "^12.0.1",
     "@angular/material": "^11.2.8",
-    "@angular/platform-browser": "^12.0.0-next.8",
-    "@angular/platform-browser-dynamic": "^12.0.0-next.8",
-    "@angular/platform-server": "^12.0.0-next.8",
-    "@angular/router": "^12.0.0-next.8",
-    "@angular/service-worker": "^12.0.0-next.8",
+    "@angular/platform-browser": "^12.0.1",
+    "@angular/platform-browser-dynamic": "^12.0.1",
+    "@angular/platform-server": "^12.0.1",
+    "@angular/router": "^12.0.1",
+    "@angular/service-worker": "^12.0.1",
     "@ctrl/ngx-emoji-mart": "^5.1.0",
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -72,9 +72,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular/cli": "^11.2.8",
-    "@angular/compiler-cli": "^12.0.0-next.8",
-    "@angular/language-service": "^12.0.0-next.8",
+    "@angular/cli": "^12.0.1",
+    "@angular/compiler-cli": "^12.0.1",
+    "@angular/language-service": "^12.0.1",
     "@nguniversal/builders": "^11.2.1",
     "@types/express": "^4.17.11",
     "@types/googlemaps": "^3.43.3",
