--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@ngx-share/core": "^7.1.4",
     "@tensorflow-models/coco-ssd": "^2.2.1",
     "@tensorflow/tfjs": "^3.3.0",
+    "angularx-social-login": "^4.0.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.10.1",
     "emoji-mart": "^3.0.1",
