--- a/package.json
+++ b/package.json
@@ -45,8 +45,11 @@
     "@ngx-share/button": "^7.1.4",
     "@ngx-share/buttons": "^7.1.4",
     "@ngx-share/core": "^7.1.4",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
     "@tensorflow-models/coco-ssd": "^2.2.1",
     "@tensorflow/tfjs": "^3.3.0",
+    "@zxing/library": "^0.18.3",
+    "@zxing/ngx-scanner": "^3.2.0",
     "angularx-social-login": "^4.0.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.10.1",
