--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.2",
   "scripts": {
     "ng": "ng",
-    "start": "HTTPS=true ng serve --host 0.0.0.0 --proxy-config proxy.conf.json",
+    "start": "HTTPS=true ng serve --host 192.168.1.65 --proxy-config proxy.conf.json",
     "build": "ng build",
     "post-build": "node ./build/post-build.js",
     "test": "ng test",
@@ -41,6 +41,7 @@
     "@ionic-native/android-permissions": "^5.32.0",
     "@ionic-native/core": "^5.32.0",
     "@ng-toolkit/universal": "^8.1.0",
+    "@ngrx/store": "^12.4.0",
     "@nguniversal/express-engine": "^12.0.0",
     "@ngx-share/button": "^7.1.4",
     "@ngx-share/buttons": "^7.1.4",
