--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@techiediaries/ngx-qrcode": "^9.1.0",
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow/tfjs": "^3.9.0",
+    "@zxing/browser": "^0.0.5",
     "@zxing/library": "^0.18.6",
     "@zxing/ngx-scanner": "^3.2.0",
     "angularx-social-login": "^4.0.1",
