--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "@ngx-share/button": "^7.1.4",
     "@ngx-share/buttons": "^7.1.4",
     "@ngx-share/core": "^7.1.4",
-    "@stripe/stripe-js": "^1.20.3",
     "@techiediaries/ngx-qrcode": "^9.1.0",
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow/tfjs": "^3.9.0",
+    "@types/stripe-v3": "^3.1.26",
     "@zxing/browser": "^0.0.5",
     "@zxing/library": "^0.18.6",
     "@zxing/ngx-scanner": "^3.2.0",
@@ -67,8 +67,8 @@
     "ngx-hammer": "^1.1.8",
     "ngx-mask": "^12.0.0",
     "ngx-sharebuttons": "^9.0.0",
-    "ngx-stripe": "^12.7.0",
     "rxjs": "^7.4.0",
+    "stripe-angular": "^1.7.0",
     "tslib": "^2.3.1",
     "yelp-fusion": "^3.0.0",
     "zone.js": "~0.11.4"
