--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular/cli": "^12.2.9",
+    "@angular/cli": "13.1",
     "@angular/compiler-cli": "^12.2.9",
     "@angular/language-service": "^12.2.9",
     "@nguniversal/builders": "^12.1.1",
