--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@angular-devkit/build-angular": "13.3.1",
     "@angular/animations": "^13.3.1",
     "@angular/cdk": "^13.3.1",
-    "@angular/cli": "^13.3.2",
     "@angular/common": "^13.3.1",
     "@angular/compiler": "^13.3.1",
     "@angular/core": "^13.3.1",
@@ -41,7 +40,6 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ngrx/store": "^12.4.0",
-    "@nguniversal/builders": "^13.1.0",
     "@nguniversal/express-engine": "^13.1.0",
     "@ngx-share/button": "^7.1.4",
     "@ngx-share/buttons": "^7.1.4",
@@ -73,8 +71,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular/cli": "^13.3.1",
     "@angular/compiler-cli": "^13.3.1",
     "@angular/language-service": "^13.3.1",
+    "@nguniversal/builders": "13.1",
     "@types/express": "^4.17.13",
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "^3.9.1",
@@ -82,10 +82,10 @@
     "@types/node": "^16.11.6",
     "agm-overlays": "^2.0.0",
     "codelyzer": "^6.0.2",
-    "ftp-deploy": "^2.4.1",
+    "ftp-deploy": "^2.3.8",
     "jasmine-core": "~3.9.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "6.3.4",
+    "karma": "^6.3.17",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^4.0.1",
