--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "e2e": "ng e2e",
     "dev:ssr": "ng run spotbie:serve-ssr",
     "serve:ssr": "node dist/spotbie/server/main.js",
-    "build:ssr": "ng build --prod --output-hashing=all && ng run spotbie:server:production",
+    "build:ssr": "ng build --configuration production --output-hashing=all && ng run spotbie:server:production",
     "prerender": "ng run spotbie:prerender",
-    "build:android": "ng build --prod --base-href . --output-path /home/spotbie/Desktop/spotbie/spotbie_android/www/",
-    "build:ios": "ng build --prod --base-href . --output-path ~/Desktop/spotbie/spotbie_ios/www/",
+    "build:android": "ng build --configuration production --base-href . --output-path /home/spotbie/Desktop/spotbie/spotbie_android/www/",
+    "build:ios": "ng build --configuration production --base-href . --output-path ~/Desktop/spotbie/spotbie_ios/www/",
     "deploy:server": "node deploy"
   },
   "private": true,
@@ -24,6 +24,7 @@
     "@angular-devkit/build-angular": "13.3.1",
     "@angular/animations": "^13.3.1",
     "@angular/cdk": "^13.3.1",
+    "@angular/cli": "^13.3.2",
     "@angular/common": "^13.3.1",
     "@angular/compiler": "^13.3.1",
     "@angular/core": "^13.3.1",
@@ -44,6 +45,7 @@
     "@ngx-share/button": "^7.1.4",
     "@ngx-share/buttons": "^7.1.4",
     "@ngx-share/core": "^7.1.4",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
     "@types/stripe-v3": "^3.1.26",
     "@zxing/browser": "^0.0.5",
     "@zxing/library": "^0.18.6",
@@ -70,7 +72,6 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular/cli": "13.1",
     "@angular/compiler-cli": "^13.3.1",
     "@angular/language-service": "^13.3.1",
     "@nguniversal/builders": "^12.1.1",
