--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.1.0",
+    "@agm/core": "3.0.0-beta.0",
     "@angular-devkit/build-angular": "14.0.5",
     "@angular/animations": "^14.0.5",
     "@angular/cdk": "^14.0.4",
@@ -34,22 +34,21 @@
     "@angular/platform-server": "^14.0.5",
     "@angular/router": "^14.0.5",
     "@angular/service-worker": "^14.0.5",
-    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ngrx/store": "^14.0.1",
-    "@nguniversal/express-engine": "^13.1.0",
+    "@nguniversal/express-engine": "^14.0.3",
     "@ngx-share/button": "^7.1.4",
     "@ngx-share/buttons": "^7.1.4",
     "@ngx-share/core": "^7.1.4",
     "@techiediaries/ngx-qrcode": "^9.1.0",
     "@types/stripe-v3": "^3.1.26",
-    "@zxing/browser": "^0.0.5",
-    "@zxing/library": "^0.18.6",
-    "@zxing/ngx-scanner": "^3.2.0",
-    "angularx-social-login": "^4.0.1",
+    "@zxing/browser": "^0.1.1",
+    "@zxing/library": "^0.19.1",
+    "@zxing/ngx-scanner": "^3.6.2",
     "bootstrap": "^5.1.2",
     "core-js": "^3.21.1",
     "express": "^4.17.3",
@@ -57,16 +56,16 @@
     "jquery": "^3.6.0",
     "localstorage-polyfill": "^1.0.1",
     "ng-lazyload-image": "^9.1.0",
-    "ngx-clipboard": "^14.0.1",
-    "ngx-cookie-service": "^12.0.3",
-    "ngx-device-detector": "^2.1.1",
+    "ngx-clipboard": "^15.1.0",
+    "ngx-cookie-service": "^14.0.1",
+    "ngx-device-detector": "^4.0.0",
     "ngx-font-awesome": "^1.0.0",
     "ngx-hammer": "^1.1.8",
     "ngx-mask": "^13.1.4",
     "ngx-sharebuttons": "^10.0.0",
     "rxjs": "^7.4.0",
     "stripe-angular": "^1.7.0",
-    "tslib": "^2.3.1",
+    "tslib": "^2.4.0",
     "yelp-fusion": "^3.0.0",
     "zone.js": "~0.11.4"
   },
@@ -74,7 +73,7 @@
     "@angular/cli": "^14.0.5",
     "@angular/compiler-cli": "^14.0.5",
     "@angular/language-service": "^14.0.5",
-    "@nguniversal/builders": "13.1",
+    "@nguniversal/builders": "14.0.3",
     "@types/express": "^4.17.13",
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "^3.9.1",
