--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "3.0.0-beta.0",
+    "@abacritt/angularx-social-login": "^1.2.1",
+    "@agm/core": "^3.0.0-beta.0",
     "@angular-devkit/build-angular": "14.0.5",
     "@angular/animations": "^14.0.5",
     "@angular/cdk": "^14.0.4",
@@ -45,6 +46,7 @@
     "@ngx-share/buttons": "^7.1.4",
     "@ngx-share/core": "^7.1.4",
     "@techiediaries/ngx-qrcode": "^9.1.0",
+    "@types/googlemaps": "^3.39.12",
     "@types/stripe-v3": "^3.1.26",
     "@zxing/browser": "^0.1.1",
     "@zxing/library": "^0.19.1",
@@ -75,7 +77,6 @@
     "@angular/language-service": "^14.0.5",
     "@nguniversal/builders": "14.0.3",
     "@types/express": "^4.17.13",
-    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "^3.9.1",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^16.11.6",
