--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "core-js": "^3.21.1",
     "express": "^4.17.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.1",
     "localstorage-polyfill": "^1.0.1",
     "ng-lazyload-image": "^9.1.0",
     "ngx-clipboard": "^15.1.0",
