--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "npm run prerender"
+  command = "CI='' npm run prerender"
   functions = "./functions"
   publish = "dist/spotbie/browser"
