--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@ngx-share/button": "^7.1.4",
     "@ngx-share/buttons": "^7.1.4",
     "@ngx-share/core": "^7.1.4",
+    "@sentry/angular": "^7.23.0",
+    "@sentry/tracing": "^7.23.0",
     "@techiediaries/ngx-qrcode": "^9.1.0",
     "@types/googlemaps": "^3.39.12",
     "@types/stripe-v3": "^3.1.26",
