ADDED: Sms history, Recent Guests, Material Theming, NGXS, Angular-ru state management REMOVED: NgRx

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "@agm/core": "^3.0.0-beta.0",
     "@angular-devkit/build-angular": "14.2.6",
+    "@angular-ru/cdk": "^15.0.1",
+    "@angular-ru/ngxs": "^14.2.2",
     "@angular/animations": "^14.2.6",
     "@angular/cdk": "^14.2.5",
     "@angular/common": "^14.2.6",
@@ -45,11 +47,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@ngrx/store": "^14.3.2",
     "@nguniversal/express-engine": "^14.2.0",
     "@ngx-share/button": "^7.1.4",
     "@ngx-share/buttons": "^7.1.4",
     "@ngx-share/core": "^7.1.4",
+    "@ngxs/logger-plugin": "^3.8.2",
+    "@ngxs/storage-plugin": "^3.8.2",
+    "@ngxs/store": "^3.8.2",
     "@sentry/angular": "^7.23.0",
     "@sentry/tracing": "^7.23.0",
     "@techiediaries/ngx-qrcode": "^9.1.0",
@@ -63,6 +67,7 @@
     "core-js": "^3.21.1",
     "express": "^4.17.3",
     "font-awesome": "^4.7.0",
+    "i": "^0.3.7",
     "jquery": "^3.7.1",
     "localstorage-polyfill": "^1.0.1",
     "ng-lazyload-image": "^9.1.0",
@@ -73,6 +78,7 @@
     "ngx-hammer": "^1.1.8",
     "ngx-mask": "^13.1.4",
     "ngx-sharebuttons": "^10.0.0",
+    "npm": "^10.4.0",
     "rxjs": "^7.4.0",
     "stripe-angular": "^1.7.0",
     "tslib": "^2.4.0",
@@ -84,6 +90,7 @@
     "@angular/compiler-cli": "^14.2.6",
     "@angular/language-service": "^14.2.6",
     "@nguniversal/builders": "14.2.0",
+    "@ngxs/devtools-plugin": "^3.8.2",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^3.9.1",
     "@types/jasminewd2": "^2.0.10",
