--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.2",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host=0.0.0.0 --ssl --proxy-config proxy.conf.json",
+    "start": "ng serve --host=0.0.0.0 --ssl",
     "build": "ng build",
     "post-build": "node ./build/post-build.js",
     "test": "ng test",
